--- a/style.css
+++ b/style.css
@@ -2829,26 +2829,49 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
   }
 }
 
+.bio {
+        padding-left: 30%;
+        padding-right: 5%;
+    }
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+     display: none;
+        /* Hidden by default */
+        position: fixed;
+        /* Stay in place */
+        z-index: 1;
+        /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 80%;
+        /* Full width */
+        height: 80%;
+        /* Full height */
+        overflow: auto;
+        /* Enable scroll if needed */
+        /*  background-color: rgb(0,0,0); /* Fallback color */
+        /* background-color: rgba(0,0,0,0.4);  Black w/ opacity */
 }
 
 /* Modal Content/Box */
+
+  .pic {
+        height: 25%;
+        width: 25%;
+        margin:0 auto;
+    }
+
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+       background: #c7c8ca;
+        margin: 15% auto;
+        /* 15% from the top and centered */
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        /* Could be more or less, depending on screen size */
+        /*  color: #ffffff;
+   align-content: right;
+    text-align: right;*/ /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
