--- a/style.css
+++ b/style.css
@@ -2841,7 +2841,10 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
         /* Stay in place */
         z-index: 1;
         /* Sit on top */
-        left: 0;
+       left: 10%;
+       right: 5%;
+       vertical-align: middle;
+  
         top: 0;
         width: 80%;
         /* Full width */
@@ -2881,6 +2884,8 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
         padding: 20px;
         border: 1px solid #888;
         width: 80%;
+        align-content: center;
+         vertical-align: middle;
         /* Could be more or less, depending on screen size */
         /*  color: #ffffff;
    align-content: right;
